# QRT-Challenge-2025

./: .gitignore  Benchmark_nqBJ7fO.ipynb  DeepHit.ipynb  MTLR.ipynb  MTLR_custom copy.ipynb  MTLR_custom.ipynb  MTLR_pycox.ipynb  MTLR_vrai.ipynb  Neural_MTLR.ipynb  Preprocessing pipeline.ipynb  Preprocessing.ipynb  QRT_Data_challenge.ipynb  README.md  best_params.txt  explo_pycox.ipynb  moyenneur.ipynb  pyproject.toml  scores.md  submission_mtlr.csv  submission_mtlr_pycox.csv  test survhive.ipynb
cox-time/: explo.ipynb
data/: clinical_train_imputed.csv  clinical_val_imputed.csv  df_eval_scaled.csv  eval_enhanced.csv  eval_enhanced_V2.csv  eval_pivot.csv  eval_pivot2.csv  eval_pivot3.csv  train_enhanced.csv  train_enhanced_V2.csv  train_pivot.csv  train_pivot2.csv  train_pivot3.csv  val_enhanced.csv
figures/: MTLR_741.md  MTLR_7445.md
images/: MTLR_741.md  MTLR_7445.md
old/: Benchmark_nqBJ7fO.ipynb  Best_params.md  MTLR.ipynb  Preprocessing.ipynb  XGB_Concordance.ipynb  XGB_cox.ipynb  best_params_mtlr.json  coxnet.ipynb  coxph-tune.ipynb  explo_pycox.ipynb  explo_xgsf.ipynb  exploration_arthur.ipynb  gb_surv.ipynb  ipcridge.ipynb  moyenneur.ipynb  mtlr_feature_importance.json  stacking_XGBCox_RSF.ipynb  test survhive.ipynb
results/: best_params_mtlr.json  gene_HR_ranking.csv  gene_beta_coefficients_ranking.csv  gene_ranking_survival.csv  genetic_riskscore_calibration_train.csv  genetic_riskscore_summary_train.csv  mtlr_feature_importance.json
src/: Benchmark_nqBJ7fO.ipynb  coxph.ipynb  explo-clfbin.ipynb  explo-mtlr.ipynb
submissions/: 0.7623.csv  7542_moy_7512_7497.csv  7548_moy_7525_7497.csv  MLTR_7412_615.csv  MLTR_793.csv  MTLR.csv  MTLR_7302.csv  MTLR_7445.csv  MTLR_7497.csv  MTLR_7512.csv  MTLR_7525.csv  MTLR_XGB_0.7667.csv  MTLR_moy.csv  cox-time-notworking.csv  coxph_enhanced.csv  coxph_enhanced_2.csv  coxph_enhanced_tuned.csv  ensemble_mtlr.csv  ensemble_one.csv  mtlr.csv  (+12 more)
(+45 files in other folders)
