[project]
name = "qrt-challenge-2025"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "notebook>=7.4.5",
    "pandas>=2.3.2",
    "pycox>=0.3.0",
    "scikit-learn>=1.7.2",
    "scikit-survival>=0.25.0",
    "torch>=2.8.0",
    "torchtuples>=0.2.2",
]
