[project]
name = "qrt-challenge-2025"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "graphviz>=0.21",
    "joblib>=1.5.2",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.6",
    "notebook>=7.4.5",
    "numpy>=2.2.6",
    "optuna>=4.5.0",
    "pandas>=2.3.2",
    "pandas-stubs==2.3.2.250926",
    "plotly>=6.3.0",
    "pycox>=0.3.0",
    "pytest>=8.4.2",
    "scikit-learn>=1.7.2",
    "scikit-survival>=0.25.0",
    "scipy>=1.16.1",
    "scipy-stubs==1.16.2.0",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "torchtuples>=0.2.2",
    "tqdm>=4.67.1",
    "xgboost>=3.0.5",
]
